--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -66,7 +66,7 @@
 
 
 
-                <button type="submit" class="btn btn-primary btn-block">Sign in</button>
+                <button type="submit" class="btn btn-primary btn-block">Register</button>
             </form>
         </div>
     </div>
