--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,72 +1,81 @@
 <!DOCTYPE html>
 <html lang="en"
-      xmlns:th="http://www.thymeleaf.org"
       xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
+      xmlns:sec="http://www.thymeleaf.org/extras/spring-security"
+      xmlns:th="http://www.thymeleaf.org">
 <head th:replace="~{fragments/head :: head (${title})}"></head>
 <body>
 <header th:replace="~{fragments/header :: header (${headerList})}"></header>
-<ul th:fragment="loginRegister (content)" class="navbar-nav ms-auto">
+<ul class="navbar-nav ms-auto" th:fragment="loginRegister (content)">
     <li class="nav-item me-2 pt-2" sec:authorize="isAuthenticated()">
         <span class="navbar-text">Welcome, <span sec:authentication="name"></span>!</span>
     </li>
     <li sec:authorize="isAuthenticated()">
         <form class="d-flex" th:action="@{/logout}" th:method="POST">
-            <button type="submit" class="btn btn-secondary">Sign out</button>
+            <button class="btn btn-secondary" type="submit">Sign out</button>
         </form>
     </li>
     <li class="nav-item" sec:authorize="!isAuthenticated()">
-        <a class="nav-link" th:href="@{/login}" th:classappend="${page == 'login'} ? 'active' : ''">Sign in</a>
+        <a class="nav-link" th:classappend="${page == 'login'} ? 'active' : ''" th:href="@{/login}">Sign in</a>
     </li>
 </ul>
 <div id="login-container">
     <ul class="nav nav-pills mb-3" id="pills-tab" role="tablist">
         <li class="nav-item" role="presentation">
-            <button class="nav-link active" id="pills-login-tab" data-bs-toggle="pill" data-bs-target="#pills-login" type="button" role="tab" aria-controls="pills-login" aria-selected="true">Login</button>
+            <button aria-controls="pills-login" aria-selected="true" class="nav-link active"
+                    data-bs-target="#pills-login"
+                    data-bs-toggle="pill" id="pills-login-tab" role="tab" type="button">Login
+            </button>
         </li>
         <li class="nav-item" role="presentation">
-            <button class="nav-link" id="pills-register-tab" data-bs-toggle="pill" data-bs-target="#pills-register" type="button" role="tab" aria-controls="pills-register" aria-selected="false">Register</button>
+            <button aria-controls="pills-register" aria-selected="false" class="nav-link"
+                    data-bs-target="#pills-register"
+                    data-bs-toggle="pill" id="pills-register-tab" role="tab" type="button">Register
+            </button>
         </li>
     </ul>
     <div class="tab-content" id="pills-tabContent">
-        <div class="tab-pane fade show active" id="pills-login" role="tabpanel" aria-labelledby="pills-login-tab">
-            <form th:action="@{/login}" method="POST">
+        <div aria-labelledby="pills-login-tab" class="tab-pane fade show active" id="pills-login" role="tabpanel">
+            <form method="POST" th:action="@{/login}">
                 <div class="form-floating mb-4">
-                    <input type="text" name="username" id="login-user-name" class="form-control" placeholder="Username"/>
+                    <input class="form-control" id="login-user-name" name="username" placeholder="Username"
+                           type="text"/>
                     <label class="form-label" for="login-user-name">Username</label>
                 </div>
 
                 <div class="form-floating mb-4">
-                    <input name="password" type="password" id="login-password" class="form-control" placeholder="Password" />
+                    <input class="form-control" id="login-password" name="password" placeholder="Password"
+                           type="password"/>
                     <label class="form-label" for="login-password">Password</label>
                 </div>
 
-                <button type="submit" class="btn btn-primary btn-block">Sign in</button>
+                <button class="btn btn-primary btn-block" type="submit">Sign in</button>
             </form>
         </div>
-        <div class="tab-pane fade" id="pills-register" role="tabpanel" aria-labelledby="pills-register-tab">
-            <form th:action="@{/register}" method="post">
+        <div aria-labelledby="pills-register-tab" class="tab-pane fade" id="pills-register" role="tabpanel">
+            <form method="post" th:action="@{/register}">
                 <div class="form-floating mb-4">
-                    <input name="username" type="text" id="register-user-name" class="form-control" placeholder="User Name"/>
+                    <input class="form-control" id="register-user-name" name="username" placeholder="User Name"
+                           type="text"/>
                     <label class="form-label" for="register-user-name">User Name</label>
                 </div>
 
                 <div class="form-floating mb-4">
-                    <input name="password" type="password" id="register-password" class="form-control" placeholder="Confirm-Password"/>
+                    <input class="form-control" id="register-password" name="password" placeholder="Confirm-Password"
+                           type="password"/>
                     <label class="form-label" for="register-password">Password</label>
                 </div>
 
                 <div class="form-group">
                     <label for="register-role">User Role</label>
-                    <select name="role" class="form-control" id="register-role">
+                    <select class="form-control" id="register-role" name="role">
                         <option>USER</option>
                         <option>ADMIN</option>
                     </select>
                 </div>
 
 
-
-                <button type="submit" class="btn btn-primary btn-block">Register</button>
+                <button class="btn btn-primary btn-block" type="submit">Register</button>
             </form>
         </div>
     </div>
