adding proper error management to api controllers

--- a/src/main/resources/templates/fragments/fragment_parts/footer-parts.html
+++ b/src/main/resources/templates/fragments/fragment_parts/footer-parts.html
@@ -30,7 +30,7 @@
 </a>
 
 <a th:fragment="printSong (content)">
-    <button class="btn btn-primary" type="button">Print Song</button>
+    <button class="btn btn-primary disabled" type="button">Print Song</button>
 </a>
 
 <a class="btn btn-danger delete-button" th:fragment="deleteAlbum (content)">
@@ -39,14 +39,14 @@
 
 
 <a class="btn btn-primary" th:fragment="printAlbum (content)">
-    <button class="btn btn-primary" type="button">Print Album</button>
+    <button class="btn btn-primary disabled" type="button">Print Album</button>
 </a>
 
 <a class="btn btn-danger delete-button" th:fragment="deleteArtist (content)">
     <button class="btn btn-danger" type="button">Delete Artist</button>
 </a>
 <a class="btn btn-primary" th:fragment="printArtist (content)">
-    <button class="btn btn-primary" type="button">
+    <button class="btn btn-primary disabled" type="button">
         Print Artist
     </button>
 </a>
