--- a/src/main/resources/templates/allArtists.html
+++ b/src/main/resources/templates/allArtists.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org"
-      xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
+<html lang="en"
+      xmlns:th="http://www.thymeleaf.org">
 <head th:replace="~{fragments/head :: head (${title})}"></head>
 <body>
 <header th:replace="~{fragments/header :: header (${headerList})}"></header>
@@ -18,15 +18,15 @@
                     <thead class="table-header">
                     <th>Album Names</th>
                     </thead>
-                    <tbody  id = "preview-album-names">
+                    <tbody id="preview-album-names">
                     </tbody>
                 </table>
             </div>
         </div>
         <table class='table table-bordered table-condensed table-striped table-hover' id="all-artists-table">
             <thead class="table-header">
-            <th >artistName</th>
-            <th >artistFollowers</th>
+            <th>artistName</th>
+            <th>artistFollowers</th>
             <!--            <th >favoriteGenre</th>-->
             </thead>
             <tbody id="all-artists-table-body">
@@ -35,15 +35,15 @@
     </div>
     <div class="pagination">
 
-        <div class="page-viewer__button button"  id="first-page-button">
+        <div class="page-viewer__button button" id="first-page-button">
             <a class="page-viewer__button__link">First</a>
         </div>
-        <div class="page-viewer__button button"  id="previous-page-button">
+        <div class="page-viewer__button button" id="previous-page-button">
             <a class="page-viewer__button__link">Previous</a>
         </div>
         <!--            current page viewer div-->
         <div class="page-viewer__button button">
-            <span class="page-viewer__button__link"  id="current-page-view"></span>
+            <span class="page-viewer__button__link" id="current-page-view"></span>
         </div>
         <div class="page-viewer__button button" id="next-page-button">
             <a class="page-viewer__button__link">Next</a>
